--- a/css/styles.css
+++ b/css/styles.css
@@ -921,6 +921,10 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   height: 11px;
 
   color: var(--accent-black-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close:hover,
@@ -944,6 +948,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 
 .modal-input {
+ 
   width: 100%;
   height: 40px;
   margin-bottom: 10px;
@@ -964,10 +969,32 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   fill: currentColor
 }
 
+.modal-input:not(:placeholder-shown) {
+  border-color: var(--accent-color)
+}
+
+.modal-textarea {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  padding: 12px 16px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+}
+.modal-textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
 /*box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
 0px 1px 1px rgba(0, 0, 0, 0.14),
 0px 2px 1px rgba(0, 0, 0, 0.2);*/
 .label-span {
+  display: inline-block;
   margin-bottom: 4px;
   font-weight: 400;
   font-size: 12px;
@@ -976,6 +1003,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 
   color: var(--primary-text-color)
 }
+
 .text-form {
   padding-top: 40px;
   margin-bottom: 12px;
