--- a/css/styles.css
+++ b/css/styles.css
@@ -948,29 +948,30 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 
 .modal-input {
- 
+
   width: 100%;
   height: 40px;
   margin-bottom: 10px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
+  cursor: pointer;
 
   transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:hover,
+.modal-input:hover {
+  border-color: var(--accent-color);
+}
+
 .modal-input:focus {
+  outline: 0;
   border-color: var(--accent-color);
 }
 
 .modal-input {
   fill: currentColor
-}
-
-.modal-input:not(:placeholder-shown) {
-  border-color: var(--accent-color)
 }
 
 .modal-textarea {
@@ -980,6 +981,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   border-radius: 4px;
   resize: none;
   padding: 12px 16px;
+  margin-bottom: 20px;
 
   font-weight: 400;
   font-size: 12px;
@@ -1015,6 +1017,19 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   letter-spacing: 0.03em;
 
   color: var(--title-text-color)
+}
+.contract {
+
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+letter-spacing: 0.03em;
+text-decoration-line: underline;
+
+color: var(--accent-color);
+}
+.checkbox-frame {
+color: var(--title-text-color);
 }
 
 .button-form {
