--- a/css/styles.css
+++ b/css/styles.css
@@ -952,6 +952,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   width: 100%;
   height: 40px;
   margin-bottom: 10px;
+  padding-left: 42px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   cursor: pointer;
@@ -971,9 +972,39 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 
 .modal-input {
-  fill: currentColor
+  fill: currentColor;
+}
+.input-wrapper {
+  position: relative;
+  margin-bottom: 10px;
 }
 
+.input-wrapper input {
+  margin-bottom: 0;
+}
+.input-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: var(--title-text-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:focus+.input-icon,
+.modal-input:hover+.input-icon {
+  fill: var(--accent-color);
+}
+.modal-label {
+margin-bottom: 4px;
+font-weight: 400;
+font-size: 12px;
+line-height: 14px;
+letter-spacing: 0.01em;
+
+color:var(--primary-text-color);
+}
 .modal-textarea {
   width: 100%;
   height: 120px;
@@ -992,20 +1023,6 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   color: rgba(117, 117, 117, 0.5);
 }
 
-/*box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-0px 1px 1px rgba(0, 0, 0, 0.14),
-0px 2px 1px rgba(0, 0, 0, 0.2);*/
-.label-span {
-  display: inline-block;
-  margin-bottom: 4px;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-
-  color: var(--primary-text-color)
-}
-
 .text-form {
   padding-top: 40px;
   margin-bottom: 12px;
@@ -1018,20 +1035,39 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 
   color: var(--title-text-color)
 }
-.contract {
 
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-letter-spacing: 0.03em;
-text-decoration-line: underline;
+.icon-check {
 
-color: var(--accent-color);
+  border: 0.2px solid var(--primary-white-color);
+  border-radius: 2px;
+  color: var(--primary-white-color);
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.checkbox-frame {
-color: var(--title-text-color);
+.icon-check:hover,
+.icon-check:focus {
+background-color: var(--accent-color);
+}
+.icon-check {
+  fill: currentColor;
 }
 
+.text-checkbox {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+.conditions-link {
+  text-decoration-line: underline;
+  color: var(--accent-color);
+}
 .button-form {
+
+  margin-top: 30px;
+  margin-bottom: 40px;
   padding: 10px 52px;
 }
