--- a/css/styles.css
+++ b/css/styles.css
@@ -862,6 +862,21 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 .social-icons-footer .social-icon {
   fill: currentColor
 }
+
+  /*підпишіться на розсилку*/
+.footer-form {
+  display: flex;
+    align-items: center;
+}
+.footer-input {
+  width: 100%;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  background-color: #2F303A;
+ 
+}
+
 /*модальне вікно*/
 
 .modal-backdrop {
