--- a/css/styles.css
+++ b/css/styles.css
@@ -89,12 +89,13 @@ body {
 /*логотип*/
 
 .logo-blue {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.2;
-  color: #2196f3;
+  line-height: 31px;
+  letter-spacing: 0.03em;
+  color: var(--accent-color)
 }
 
 .logo-black {
@@ -864,19 +865,37 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 
   /*підпишіться на розсилку*/
+
 .footer-form {
+  margin-left: 93px;
+}
+.footer-buttons  {
   display: flex;
-    align-items: center;
+  
 }
 .footer-input {
-  width: 100%;
-  height: 50px;
+  padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  min-width: 358px;
+  height: 50px;
   background-color: #2F303A;
- 
+
+}
+.button-footer {
+  display: flex;
+  align-items: center;
+  margin-left: 12px;
 }
 
+.icon-send {
+  margin-left: 10px;
+  color: var(--primary-white-color);
+}
+.icon-wrapper .icon-send {
+  fill: currentColor;
+}
 /*модальне вікно*/
 
 .modal-backdrop {
