--- a/css/styles.css
+++ b/css/styles.css
@@ -864,274 +864,280 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   fill: currentColor
 }
 
-    /*підпишіться на розсилку*/
-  
-    .footer-form {
-      margin-left: 93px;
-    }
-  
-    .footer-buttons {
-      display: flex;
-  
-    }
-  
-    .footer-input {
-      padding-left: 16px;
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-      border-radius: 4px;
-      min-width: 358px;
-      height: 50px;
-      background-color: #2F303A;
-  
-    }
-  
-    .button-footer {
-      display: flex;
-      align-items: center;
-      margin-left: 12px;
-    }
-  
-    .icon-send {
-      margin-left: 10px;
-      color: var(--primary-white-color);
-    }
-  
-    .icon-wrapper .icon-send {
-      fill: currentColor;
-    }
-  
-    /*модальне вікно*/
-  
-    .modal-backdrop {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      opacity: 1;
-      visibility: visible;
-      background-color: rgba(0, 0, 0, 0.2);
-      transition: opacity 250ms, visibility 250ms;
-    }
-  
-    .modal-backdrop .is-hidden {
-      pointer-events: none;
-  
-    }
-  
-    .modal-backdrop.is-hidden .modal {
-      transform: rotate(-180deg);
-    }
-  
-    .modal {
-      width: 528px;
-      height: 581px;
-      ;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) rotate(0);
-      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      background-color: var(--primary-white-color);
-      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-      border-radius: 4px;
-    }
-  
-    .modal .close-modal {
-      position: absolute;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      top: 8px;
-      right: 8px;
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
-      border: 1px solid rgba(0, 0, 0, 0.1);
-      background: var(--primary-white-color);
-  
-    }
-  
-    .close {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 11px;
-      height: 11px;
-  
-      color: var(--accent-black-color);
-  
-      transition-property: color;
-      transition-duration: 250ms;
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    }
-  
-    .close:hover,
-    .close:focus {
-      color: var(--accent-color)
-    }
-  
-    .close-modal .close {
-      fill: currentColor;
-    }
-  
-    .is-hidden {
-      visibility: hidden;
-      opacity: 0;
-      pointer-events: none;
-    }
-  
-    .modal-form {
-      padding-left: 40px;
-      padding-right: 40px;
-    }
-  
-    .text-form {
-      padding-top: 40px;
-      margin-bottom: 12px;
-  
-      font-weight: 700;
-      font-size: 20px;
-      line-height: 23px;
-      text-align: center;
-      letter-spacing: 0.03em;
-  
-      color: var(--title-text-color)
-    }
-  
-    .modal-input {
-  
-      width: 100%;
-      height: 40px;
-      margin-bottom: 10px;
-      padding-left: 42px;
-      border-radius: 4px;
-      border: 1px solid rgba(33, 33, 33, 0.2);
-      cursor: pointer;
-  
-      transition-property: border-color;
-      transition-duration: 250ms;
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    }
-  
-    .modal-input:hover {
-      border-color: var(--accent-color);
-    }
-  
-    .modal-input:focus {
-      outline: 0;
-      border-color: var(--accent-color);
-    }
-  
-    .modal-input {
-      fill: currentColor;
-    }
-  
-    .input-wrapper {
-      position: relative;
-      margin-bottom: 10px;
-    }
-  
-    .input-wrapper input {
-      margin-bottom: 0;
-    }
-  
-    .input-icon {
-      position: absolute;
-      left: 12px;
-      top: 50%;
-      transform: translateY(-50%);
-      color: var(--title-text-color);
-      transition-property: fill;
-      transition-duration: 250ms;
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    }
-  
-    .modal-input:focus+.input-icon,
-    .modal-input:hover+.input-icon {
-      fill: var(--accent-color);
-    }
-  
-    .modal-label {
-      margin-bottom: 4px;
-      font-weight: 400;
-      font-size: 12px;
-      line-height: 14px;
-      letter-spacing: 0.01em;
-  
-      color: var(--primary-text-color);
-    }
-  
-    .modal-textarea {
-      width: 100%;
-      height: 120px;
-      border: 1px solid rgba(33, 33, 33, 0.2);
-      border-radius: 4px;
-      resize: none;
-      padding: 12px 16px;
-      margin-bottom: 20px;
-  
-      font-weight: 400;
-      font-size: 12px;
-      line-height: 14px;
-      letter-spacing: 0.01em;
-    }
-  
-    .modal-textarea::placeholder {
-      color: rgba(117, 117, 117, 0.5);
-    }
-  
-    /*галочка,умови договору*/
-    .check-line {
-      margin-bottom: 30px;
-    }
-  
-    .checkbox-agree {
-      display: flex;
-      align-items: center;
-    }
-  
-    .checkbox-agree .icon-wrapper {
-      width: 16px;
-      height: 15px;
-      border: 2px solid var(--title-text-color);
-      border-radius: 2px;
-      margin-right: 8px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  
-    .checkbox-agree .agree-icon {
-      fill: transparent;
-    }
-  
-    .check-line input:checked+.checkbox-agree .icon-wrapper {
-      background-color: var(--accent-color);
-      border: none;
-    }
-  
-    .check-line input:checked+.checkbox-agree .agree-icon {
-      fill: var(--primary-white-color);
-    }
-  
-    .text-checkbox {
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 24px;
-      letter-spacing: 0.03em;
-      color: var(--primary-text-color);
-    }
-  
-    .conditions-link {
-      text-decoration-line: underline;
-      color: var(--accent-color);
-    }
-  
-    .button-form {
-      padding: 10px 52px;
-      margin-bottom: 40px;
-    }
+/*підпишіться на розсилку*/
+
+.footer-form {
+  margin-left: 93px;
+}
+
+.footer-buttons {
+  display: flex;
+
+}
+
+.footer-input {
+  padding-left: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  min-width: 358px;
+  height: 50px;
+  background-color: #2F303A;
+
+}
+
+.button-footer {
+  display: flex;
+  align-items: center;
+  margin-left: 12px;
+}
+
+.icon-send {
+  margin-left: 10px;
+  color: var(--primary-white-color);
+}
+
+.icon-wrapper .icon-send {
+  fill: currentColor;
+}
+
+/*модальне вікно*/
+
+.modal-backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 1;
+  visibility: visible;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms, visibility 250ms;
+}
+
+.modal-backdrop .is-hidden {
+  pointer-events: none;
+
+}
+
+.modal-backdrop.is-hidden .modal {
+  transform: rotate(-180deg);
+}
+
+.modal {
+  width: 528px;
+  height: 581px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--primary-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal .close-modal {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background: var(--primary-white-color);
+
+}
+
+.close {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 11px;
+  height: 11px;
+
+  color: var(--accent-black-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close:hover,
+.close:focus {
+  color: var(--accent-color)
+}
+
+.close-modal .close {
+  fill: currentColor;
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal-form {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.text-form {
+  padding-top: 40px;
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--title-text-color)
+}
+
+.modal-input {
+
+  width: 100%;
+  height: 40px;
+  margin-bottom: 10px;
+  padding-left: 42px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  cursor: pointer;
+
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:hover {
+  border-color: var(--accent-color);
+}
+.modal-input:focus {
+  outline: 0;
+  border-color: var(--accent-color);
+}
+
+.modal-input {
+  fill: currentColor;
+}
+
+.input-wrapper {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.input-wrapper input {
+  margin-bottom: 0;
+}
+
+.input-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: var(--title-text-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus+.input-icon,
+.modal-input:hover+.input-icon {
+  fill: var(--accent-color);
+}
+
+.modal-label {
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+
+  color: var(--primary-text-color);
+}
+
+.modal-textarea {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  padding: 12px 16px;
+  margin-bottom: 20px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal-textarea:hover, 
+.modal-textarea:focus {
+border-color: var(--accent-color);
+}
+.modal-textarea:focus {
+  outline: 0;
+}
+/*галочка,умови договору*/
+.check-line {
+  margin-bottom: 30px;
+}
+
+.checkbox-agree {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-agree .icon-wrapper {
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--title-text-color);
+  border-radius: 2px;
+  margin-right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkbox-agree .agree-icon {
+  fill: transparent;
+}
+
+.check-line input:checked+.checkbox-agree .icon-wrapper {
+  background-color: var(--accent-color);
+  border: none;
+}
+
+.check-line input:checked+.checkbox-agree .agree-icon {
+  fill: var(--primary-white-color);
+}
+
+.text-checkbox {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.conditions-link {
+  text-decoration-line: underline;
+  color: var(--accent-color);
+}
+
+.button-form {
+  padding: 10px 52px;
+}
