--- a/css/styles.css
+++ b/css/styles.css
@@ -984,12 +984,10 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 
 .modal-form {
-  padding-left: 40px;
-  padding-right: 40px;
+  padding: 40px; 
 }
 
 .text-form {
-  padding-top: 40px;
   margin-bottom: 12px;
 
   font-weight: 700;
