--- a/css/styles.css
+++ b/css/styles.css
@@ -998,7 +998,11 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 
   color: var(--title-text-color)
 }
+.input-line {
+  display: block;
+  margin-bottom: 10px;
 
+}
 .modal-input {
 
   width: 100%;
@@ -1052,7 +1056,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 
 .modal-label {
-  margin-bottom: 4px;
+  
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
