--- a/css/styles.css
+++ b/css/styles.css
@@ -865,6 +865,9 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 
 /*підпишіться на розсилку*/
+.footer-modal-form{
+  margin-left: auto
+}
 
 .footer-form {
   margin-left: 93px;
@@ -872,7 +875,6 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 
 .footer-buttons {
   display: flex;
-
 }
 
 .footer-input {
@@ -884,6 +886,16 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   height: 50px;
   background-color: #2F303A;
 
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-input:hover {
+  border-color: var(--accent-color);
+}
+.footer-input:focus {
+  outline: 0;
+  border-color: var(--accent-color);
 }
 
 .button-footer {
@@ -897,7 +909,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   color: var(--primary-white-color);
 }
 
-.icon-wrapper .icon-send {
+ .icon-send {
   fill: currentColor;
 }
 
@@ -960,6 +972,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   align-items: center;
   width: 11px;
   height: 11px;
+  cursor: pointer;
 
   color: var(--accent-black-color);
 
@@ -1101,6 +1114,7 @@ border-color: var(--accent-color);
 .checkbox-agree {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .checkbox-agree .icon-wrapper {
