--- a/css/styles.css
+++ b/css/styles.css
@@ -1013,9 +1013,8 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 .input-line {
   display: block;
-  margin-bottom: 10px;
-
 }
+
 .modal-input {
 
   width: 100%;
@@ -1045,6 +1044,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 
 .input-wrapper {
   position: relative;
+  margin-top: 4px;
   margin-bottom: 10px;
 }
 
@@ -1069,7 +1069,6 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 
 .modal-label {
-  
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
@@ -1085,6 +1084,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   border-radius: 4px;
   resize: none;
   padding: 12px 16px;
+  margin-top: 4px;
   margin-bottom: 20px;
 
   font-weight: 400;
