--- a/css/styles.css
+++ b/css/styles.css
@@ -1002,7 +1002,6 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 
 .text-form {
   margin-bottom: 12px;
-
   font-weight: 700;
   font-size: 20px;
   line-height: 23px;
@@ -1016,10 +1015,8 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 
 .modal-input {
-
   width: 100%;
   height: 40px;
-  margin-bottom: 10px;
   padding-left: 42px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1029,7 +1026,6 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal-input:hover {
   border-color: var(--accent-color);
 }
@@ -1068,6 +1064,9 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 
 .modal-label {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 4px;
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
@@ -1083,8 +1082,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   border-radius: 4px;
   resize: none;
   padding: 12px 16px;
-  margin-bottom: 20px;
-
+ 
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
@@ -1140,14 +1138,15 @@ border-color: var(--accent-color);
 }
 
 .text-checkbox {
+
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
-
 .conditions-link {
+  letter-spacing: 0.03em;
   text-decoration-line: underline;
   color: var(--accent-color);
 }
