--- a/css/styles.css
+++ b/css/styles.css
@@ -1104,7 +1104,8 @@ border-color: var(--accent-color);
 }
 /*галочка,умови договору*/
 .check-line {
-  margin-bottom: 30px;
+  padding-top: 20px;
+  padding-bottom: 30px;
 }
 
 .checkbox-agree {
@@ -1138,7 +1139,6 @@ border-color: var(--accent-color);
 }
 
 .text-checkbox {
-
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
